# reaconcom

./: .gitignore  Cargo.toml  Makefile  changelog.md  contributing.md  foundry.toml  note.md  readme.md  remappings.txt  rustfmt.toml
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: main.rs
cli/: Cargo.toml  main.rs
contract/: Reactive.sol  ReactiveHandler.sol  Service.sol  UniswapHistory.sol  UniswapHistoryReactive.sol
contract/computing/: Cargo.toml  contract.rs  schema.rs
contract/system/: AbstractCallback.sol  AbstractPausableReactive.sol  AbstractPayer.sol  AbstractReactive.sol  IPayable.sol  IPayer.sol  IReactive.sol  ISubscriptionService.sol  ISystemContract.sol
script/: Counter.s.sol  Demo.sol  demo.sol
sdk/: Cargo.toml  lib.rs
test/: Service.t.sol
