[workspace]
resolver = "2"
members = [
  "cli",
  "build/bindings",
]

[workspace.dependencies]
contract = { path = "build/bindings" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true