[workspace]
resolver = "2"
members = [
  "cli",
]

[workspace.dependencies]
reaconcom = { path = "sdk" }
contract = { path = "contract/sdk" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true