[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract.workspace = true
eyre = "0.6"
alloy = { git = "https://github.com/alloy-rs/alloy", features = [
  "full",
  "node-bindings",
  "rpc-types-debug",
  "rpc-types-trace",
  "json-rpc",
  "rpc-client",
  "signer-aws",
  "signer-keystore",
  "signer-ledger",
  "signer-mnemonic",
  "signer-trezor",
  "signer-yubihsm",
  "eips",
] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.132"

