# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "cli"
version = "1.0.0-alpha.0"
edition = "2021"

[[bin]]
name = "reaconcom"
path = "main.rs"

[dependencies]
reaconcom.workspace = true
eyre = "0.6"
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "b2278c4", features = [
  "full",
  "node-bindings",
  "rpc-types-debug",
  "rpc-types-trace",
  "json-rpc",
  "rpc-client",
  "signer-aws",
  "signer-keystore",
  "signer-ledger",
  "signer-mnemonic",
  "signer-trezor",
  "signer-yubihsm",
  "eips",
] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.132"

